# tome

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/tome-ai/: Cargo.toml
crates/tome-ai/src/: chat.rs  chat_download.rs  embedding.rs  lib.rs  rag.rs
crates/tome-api/: Cargo.toml
crates/tome-api/src/: backoff.rs  breaker.rs  cache.rs  client.rs  kill_switch.rs  lib.rs  log_buffer.rs  rate_limit.rs  reqwest_transport.rs  testing.rs  transport.rs
crates/tome-api/tests/: governance.rs
crates/tome-archive/: Cargo.toml
crates/tome-archive/src/: lib.rs  store.rs
crates/tome-config/: Cargo.toml
crates/tome-config/src/: lib.rs
crates/tome-core/: Cargo.toml
crates/tome-core/src/: config.rs  disk.rs  error.rs  lib.rs  searcher.rs  tier.rs  title.rs
crates/tome-dump/: Cargo.toml
crates/tome-dump/src/: fixture.rs  index.rs  integrity.rs  lib.rs  stream.rs
crates/tome-dump/tests/: file_integrity.rs  pipeline.rs
crates/tome-modules/: Cargo.toml
crates/tome-modules/src/: lib.rs  resolver.rs  spec.rs  store.rs
crates/tome-search/: Cargo.toml
crates/tome-search/src/: index.rs  lib.rs  query.rs  schema.rs
crates/tome-search/tests/: corpus.rs
crates/tome-services/: Cargo.toml
crates/tome-services/src/: bookmark_export.rs  category_ingest.rs  geotag_ingest.rs  lib.rs  link_resolver.rs  redirect_ingest.rs  tome.rs
crates/tome-services/tests/: bookmark_backup.rs  cold_read.rs  file_integrity.rs  ingest.rs  offline_mode.rs
crates/tome-storage/: Cargo.toml
crates/tome-storage/src/: archive.rs  article.rs  bookmark.rs  category.rs  compression.rs  geotag.rs  lib.rs  redirect.rs  schema.rs  store.rs
crates/tome-storage/tests/: lifecycle.rs
crates/tome-wikitext/: Cargo.toml
crates/tome-wikitext/src/: escape.rs  lib.rs  link.rs  render.rs
docs/: OFFLINE-SURVIVAL-KIT.md
docs/research/: local-llm-landscape.md  tauri-packaging.md
samples/: README.md  science-basics.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  nav_guard.rs  pmtiles_protocol.rs
ui/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  service.ts  styles.css  time.ts  types.ts
ui/src/components/: AskTome.tsx  BookmarkButton.tsx  Dialog.tsx  FirstRunWizard.tsx  PathField.tsx  SearchBar.tsx  Theme.tsx  Timeline.tsx
ui/src/panes/: Archive.tsx  Bookmarks.tsx  Browse.tsx  History.tsx  Library.tsx  Map.tsx  Reader.tsx  Settings.tsx
