[workspace]
resolver = "2"
members = [
    "crates/tome-core",
    "crates/tome-config",
    "crates/tome-dump",
    "crates/tome-storage",
    "crates/tome-api",
    "crates/tome-search",
    "crates/tome-wikitext",
    "crates/tome-modules",
    "crates/tome-archive",
    "crates/tome-ai",
    "crates/tome-services",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["HesNotTheGuy"]
license = "GPL-3.0-only"
repository = "https://github.com/HesNotTheGuy/tome"
homepage = "https://github.com/HesNotTheGuy/tome"
rust-version = "1.85"

[workspace.dependencies]
# Errors and serde
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime. `full` keeps the tunables minimal — every workspace
# member that imports tokio gets the same set. `test-util` (which
# exposes pause/advance APIs you do NOT want compiled into release
# builds) is opted into per-crate via a `tokio = { workspace = true,
# features = ["test-util"] }` line in [dev-dependencies] only.
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Storage and search
rusqlite = { version = "0.32", features = ["bundled"] }
tantivy = "0.22"

# Compression
bzip2 = "0.5"
zstd = "0.13"
flate2 = "1"

# HTTP and API
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
governor = "0.7"
url = "2"

# Wikitext (verify version against crates.io during step 4)
parse-wiki-text-2 = "0.2"

# Platform paths
dirs = "5"

# Hashing
sha1 = "0.10"
hex = "0.4"

# XML parsing (used by dump page parser)
quick-xml = "0.36"

# TOML (module definitions)
toml = "0.8"

# Internal crates (resolved by workspace)
tome-core    = { path = "crates/tome-core" }
tome-config  = { path = "crates/tome-config" }
tome-dump    = { path = "crates/tome-dump" }
tome-storage = { path = "crates/tome-storage" }
tome-api     = { path = "crates/tome-api" }
tome-search  = { path = "crates/tome-search" }
tome-wikitext = { path = "crates/tome-wikitext" }
tome-modules = { path = "crates/tome-modules" }
tome-archive = { path = "crates/tome-archive" }
tome-ai      = { path = "crates/tome-ai" }
tome-services = { path = "crates/tome-services" }

# Test utilities
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
