[package]
name = "tome-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional local-AI features for Tome: semantic search and RAG over the article corpus."

[dependencies]
tome-core = { workspace = true }
tome-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Optional embedding dep, behind the `semantic-search` feature so a stock
# build doesn't pay the ~10 min cold compile cost or the ~100 MB ONNX
# Runtime DLL footprint. The Tauri shell enables this feature explicitly.
fastembed = { version = "5", optional = true }

# HuggingFace download client for fetching the GGUF model file. Pure-Rust
# stack (reqwest + tokio); much lighter than llama.cpp's build, so it can
# ship under the `chat` feature without committing us to a particular
# inference backend yet. Optional, so a stock build doesn't compile it.
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["tokio", "rustls-tls"] }
tokio = { workspace = true, optional = true }

[features]
default = []
# Pulls in fastembed + ONNX Runtime. Adds substantial compile time and
# binary size. Worth it for the semantic search feature; opt-in for crates
# (like the test harness) that don't need it.
semantic-search = ["dep:fastembed"]
# Local-LLM RAG. The trait surface in `chat` module compiles always; this
# flag unlocks the model download + (in a follow-up commit) the
# llama-cpp-2 inference backend. Currently turning it on adds the
# HuggingFace downloader so users can fetch the GGUF model in advance.
chat = ["dep:hf-hub", "dep:tokio"]
