[package]
name = "tome-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Optional local-AI features for Tome: semantic search and RAG over the article corpus."

[dependencies]
tome-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

# Optional embedding dep, behind the `semantic-search` feature so a stock
# build doesn't pay the ~10 min cold compile cost or the ~100 MB ONNX
# Runtime DLL footprint. The Tauri shell enables this feature explicitly.
fastembed = { version = "5", optional = true }

# HuggingFace download client for fetching the GGUF model file. Pure-Rust
# stack (reqwest + tokio); much lighter than llama.cpp's build, so it can
# ship under the `chat` feature without committing us to a particular
# inference backend yet. Optional, so a stock build doesn't compile it.
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["tokio", "rustls-tls"] }
tokio = { workspace = true, optional = true }

# llama.cpp bindings for the local-LLM inference backend. Pulls in
# bindgen + cmake to build llama.cpp from source on first compile —
# expect ~5-10 min cold compile and a C++ toolchain requirement (MSVC
# on Windows, Xcode CLT on macOS, gcc on Linux). Optional.
llama-cpp-2 = { version = "0.1", optional = true }

[features]
default = []
# Pulls in fastembed + ONNX Runtime. Adds substantial compile time and
# binary size. Worth it for the semantic search feature; opt-in for crates
# (like the test harness) that don't need it.
semantic-search = ["dep:fastembed"]
# Chat model download via HuggingFace. Light deps (reqwest + tokio).
# Independent of the inference backend so users can pre-download the
# model on machines that don't yet have a C++ + LLVM toolchain.
chat = ["dep:hf-hub", "dep:tokio"]
# In-process inference via llama-cpp-2. Pulls in bindgen + cmake +
# the full llama.cpp C++ source build. Requires LLVM/libclang on the
# build machine (set LIBCLANG_PATH if the auto-detect fails). On a
# clean machine this adds ~10 minutes to a cold compile, so it ships
# as opt-in even on top of `chat`.
chat-inference = ["chat", "dep:llama-cpp-2"]
