[package]
name = "tome-archive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Saved historical revisions, separate from the tier system."

[dependencies]
tome-core = { workspace = true }
tome-config = { workspace = true }
tome-api = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
