[package]
name = "tome-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Centralized configuration, paths, and defaults for Tome."

[dependencies]
tome-core = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
