[package]
name = "tome-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared types, errors, and traits for Tome."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
