[package]
name = "tome-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared types, errors, and traits for Tome."

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
# Pure-Rust cross-platform `statvfs`-equivalent. Used by the disk-space
# pre-flight check before multi-GB downloads. Tiny dep, no C deps.
fs4 = "1"

[dev-dependencies]
tempfile = { workspace = true }
