[package]
name = "tome-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Full-text search index over the Wikipedia corpus."

[dependencies]
tome-core = { workspace = true }
tome-config = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
