[package]
name = "tome-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Thin orchestration layer; the only thing the UI talks to."

[dependencies]
tome-core = { workspace = true }
tome-config = { workspace = true }
tome-dump = { workspace = true }
tome-storage = { workspace = true }
tome-api = { workspace = true }
tome-search = { workspace = true }
tome-wikitext = { workspace = true }
tome-modules = { workspace = true }
tome-archive = { workspace = true }
tome-ai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }

[features]
default = []
# Forwards to tome-ai's feature; the Tauri shell enables this on its
# tome-services dependency line so the binary build pulls in fastembed.
semantic-search = ["tome-ai/semantic-search"]
# Forwards to tome-ai's `chat` feature: HuggingFace model downloader
# today, llama-cpp-2 inference backend in a follow-up.
chat = ["tome-ai/chat"]

[dev-dependencies]
tempfile = { workspace = true }
