[package]
name = "tome-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Thin orchestration layer; the only thing the UI talks to."

[dependencies]
tome-core = { workspace = true }
tome-dump = { workspace = true }
tome-storage = { workspace = true }
tome-api = { workspace = true }
tome-search = { workspace = true }
tome-wikitext = { workspace = true }
tome-modules = { workspace = true }
tome-ai = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
flate2 = { workspace = true }

[features]
default = []
# Forwards to tome-ai's feature; the Tauri shell enables this on its
# tome-services dependency line so the binary build pulls in fastembed.
semantic-search = ["tome-ai/semantic-search"]
# Forwards to tome-ai's `chat` feature: the HuggingFace model
# downloader. Inference is gated separately under `chat-inference`
# because llama-cpp-2's build needs LLVM/libclang.
chat = ["tome-ai/chat"]
chat-inference = ["tome-ai/chat-inference"]

[dev-dependencies]
tempfile = { workspace = true }
