[package]
name = "tome-wikitext"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wikitext parsing and HTML rendering for Tome."

[dependencies]
tome-core = { workspace = true }
parse-wiki-text-2 = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
